[package]
name = "smash_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skillratings = "0.20"
rusqlite = { version = "0.28.0", features = ["bundled"] }
csv  = "1.1.6"
serde = { version = "1", features = ["derive"] }
hashbrown = "0.12"